# kis-trading-template

./: .gitignore  README.md  commit_msg.txt  pyproject.toml  start_claude_OLD.bat  test_output.txt  test_output2.txt  trading-rules-execution.md  trading-strategies-overview.md
.claude/: settings.local.json
.github/workflows/: test.yml
.superpowers/sdd/: progress.md  walkforward-preregistration.md
RoboTrader_template/: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SYSTEM_FLOW.md  cache_manager.py  commit_and_push.sh  docker-compose.yml  generate_charts.bat  install_visualization.bat  main.py  pyproject.toml  requirements.txt  run_instance.bat  run_robotrader.bat  stock_list.json  stock_list.json.example  매일_분석_실행.bat  장마감_자동분석.bat
RoboTrader_template/.claude/: settings.local.json
RoboTrader_template/api/: __init__.py  circuit_breaker.py  kis_account_api.py  kis_api_manager.py  kis_auth.py  kis_chart_api.py  kis_financial_api.py  kis_market_api.py  kis_order_api.py
RoboTrader_template/archive/: README.md
RoboTrader_template/backtest/: __init__.py  allocation_backtester.py  book_backtester.py  data_completeness.py  engine.py  engine_minute.py  metrics.py  multiverse.py  regime_analysis.py  result.py  screener_universe.py  tournament_metrics.py
RoboTrader_template/books/: CANDIDATE_ALPHAS.md  README.md  aziz_day_trade.md  bellafiore_playbook.md  oneil_canslim.md  (+1 more)
agents/: ANALYZER.md  DESIGNER.md  DEVELOPER.md  DOCUMENTER.md  README.md  SUPERVISOR.md  TESTER.md  __init__.py  runner.py
scripts/: run_multiverse_smoke.py
(+1619 files in other folders)
