[project]
name = "kis-trading-template"
version = "0.9.0"
description = "Korean stock auto-trading framework template using KIS API"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.pytest.ini_options]
testpaths = ["RoboTrader_template/tests"]
asyncio_mode = "auto"
markers = [
    "slow: 느린 테스트 (DB 대량 조회 등) — pytest -m 'not slow' 로 제외",
]
